--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@
 ---------------------------------------------------- */
 /*=====================================================================
 
+
+@Default Styles
+
 Table of Content:
 01/ Variables
 02/ predefin
@@ -1112,7 +1115,7 @@ ana
 }
 
 .blog_banner_zion_beach_resort .bg-parallax{
-  background: url(../image/property_img/zion_villa_main.jpg) no-repeat scroll center bottom/cover;
+  background: url(../image/property_img/zion_new.png) no-repeat scroll center bottom/cover;
 }
 /* end-zion_beach_resort */
 
@@ -1197,6 +1200,47 @@ ana
   background: url(../image/property_img/kerla_bambo_main.jpg) no-repeat scroll center bottom/cover;
 }
 /* end-kerala_bamboo */
+
+/* urban_cliff */
+.blog_banner_urban_cliff {
+  min-height: 780px;
+  overflow: hidden;
+}
+
+
+.blog_banner_urban_cliff .banner_content {
+  margin-bottom: 0px;
+  margin-top: 106px;
+}
+
+.blog_banner_urban_cliff .banner_content h4 {
+  font-size: 60px;
+  line-height: 66px;
+  font-weight: bold;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+.blog_banner_urban_cliff .banner_content p {
+  font-size: 16px;
+  padding: 0px;
+  margin-bottom: 35px;
+}
+
+.f_48 {
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 700;
+}
+
+.blog_banner_two {
+  padding: 187px 0px 104px;
+}
+
+.blog_banner_urban_cliff .bg-parallax{
+  background: url(../image/property_img/urban_cliff_main.jpg) no-repeat scroll center bottom/cover;
+}
+/* end-urban_cliff */
 /*=============End Blog Banner css =============*/
 
 
@@ -4464,33 +4508,74 @@ img.logo-img {
 
 
 @media (max-width:768px){
+  .property_div{
+    background-color:#fff;
+    position: relative;
+    bottom: 6px;
+    border-radius: 10px;
+    border:0.1px solid #e5e3e3;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top: 10px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+}
+  }
+  
+  /* created a head_div and designed */
+  .head_div{
+    margin:left;
+    background-color:#fff;
+    width:302px;
+    height: 59px;
+    
+    
+  }
+  .head_div h3{
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: 600px;
+  }
+  
     .list_div {
     color: black;
     font-family: 'circular';
-    font-weight: 700;
+    font-weight: 600;
     width: fit-content;
-    text-align: center;
-    margin-left: auto;
+    margin-left:5px;
     margin-right: auto;
     }
+/* li style changed and added a p tag style */
 .list_div li{
   padding: 4px;
+  list-style: none;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  font-size: 14px;
+  opacity: .5;
+  line-height: 1.4;
+  
+    }
+.list_div p{
+  font-family: sans-serif;
+  
 }
+
 /* span {
   font-size: 16px;
   color: black;
   font-weight: 700;
   padding-left: 5px;
 } */
-}
 
 
+/* font changed to san-serif */
 @media (min-width: 767px){
   .list_div h3 {
-    font-family: system-ui;
-    font-weight: 700;
+    font-family:sans-serif;
+    font-weight: 600;
     color: black;
-    font-size: 26px;
+    font-size: 25px;
     margin-left: 1px;
     margin-top: 50px;
   }
@@ -4501,9 +4586,24 @@ img.logo-img {
     font-family: system-ui;
     font-weight: 400;
   }
+  /* li style changed and added a p tag style */
   .list_div li{
-    padding: 4px;
+  padding: 4px;
+  list-style: none;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  font-size: 14px;
+  opacity: .5;
+  
   }
+  .list_div p{
+    font-family: sans-serif;
+    text-transform:capitalize;
+  }
+  .list_div span{
+    opacity: .5;
+  }
+
   h4.txt_cnct {
     padding: 7px 14px;
     display: none;
@@ -4516,6 +4616,18 @@ img.logo-img {
     padding: 7px 14px;
     color: white;
   }
+  .property_div{
+    background-color:#fff;
+    position: relative;
+    bottom: 6px;
+    border-radius: 10px;
+    border:0.1px solid #e5e3e3;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top: 10px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+}
   }
 
 
@@ -4872,7 +4984,8 @@ h4.txt_cnct_min {
     color: black;
     font-weight: 600;
     display: flex;
-    justify-content: center;
+    justify-content:left;
+    font-family: sans-serif;
   }
 }
 
@@ -5139,8 +5252,9 @@ button.view-map {
     font-size: 15px;
     color: #000000b8;
   }
+  
   /* contact page updated on  31/05/2024*/
-  .contact-office h2, h3 {
+  .contact-office h2,h3 {
     font-size: 20px;
     color: black;
     font-weight: 600;
@@ -5465,7 +5579,7 @@ button.view-map {
       /* object-fit: cover; */
   }
   span.txt_roomtype {
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 50px;
     color: black;
     margin-left: 60px;
