--- a/templates/cliffcounty_details.html
+++ b/templates/cliffcounty_details.html
@@ -91,20 +91,29 @@
                     <p class="tax-price">
                         Cliff County is a sustainable homestay in Varkala, a 3-minute walk from Varkala Beach. This property encourages guests to <br> embrace nature with its eco-friendly arrangements. This homestay features free private parking, a 24-hour front desk, and free Wifi. <br> The accommodation provides airport transfers, while a bicycle rental service is also available. Each room has a private bathroom with a shower and free toiletries, <br> while some rooms include a balcony.A car rental service is available at Cliff County. Popular points of interest near the accommodation include <br> Odayam Beach, Aaliyirakkm Beach, and Varkala Cliff,Black Sand Beach, Kappil Beach. The nearest airport is Thiruvananthapuram International Airport, 25 miles from Cliff County.
                     </p> <br>
-
-                    <span class="txt_roomtype">Room Types</span><br>
+                    <!-- created a head_div -->
+                    <div class="property_div">
+                    <div class="head_div">
+                    <span class="txt_roomtype">Room Types</span></div>
                         <div class="list_div">
-                            <li>Standard NON AC  --  Room Only</li>
-                            <li>deluxe double AC  --  Room Only</li>
-                        </div><br><br>
+                            {% comment %} li sentence changed  {% endcomment %}
+                            <li>Standard NON AC  Rooms</li>
+                            <li>deluxe double AC Rooms</li>
+                        </div>
+                    </div><br>
+                <!-- created a head_div  -->
                     <!-- <span>Property Rules</span><br> -->
+                    <div class="property_div">
                     <div class="list_div">
-                    <h3>Property Rules</h3>
-                    <p>Check-in: 12 PM Check-out: 11 AM</p>
+                        <div class="head_div">
+                            <h3>Property Rules</h3>
+                        </div>
+                    <p>Check-in: 12 PM <span>&</span>  Check-out: 11 AM</p>
+                    
                     <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                     <li>Pets are not allowed.</li>
-                    
-                </div><br><br>
+                    </div>
+                </div><br>
                 <div class="room_main">
                     <!--hotel-room 1-->
 
@@ -200,7 +209,7 @@
                                 <button class="view-map">View on Map</button>
                             </a>              
                         </div>
-                    </div>
+                    
                 </div>
         </section>
 
