--- a/templates/index.html
+++ b/templates/index.html
@@ -534,7 +534,7 @@
                                     <div class="hotel-card">
                                         <div class="hotel-image">
                                             <a href="{%url 'zion_villa_resort_details' %}">
-                                            <img src="{% static 'image/property_img/zion_villa_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            <img src="{% static 'image/property_img/zion_new.png' %}" alt="City Trip Hostels Zaandam-Amsterdam">
                                             </a>
                                             <div class="more-photos">See all</div>
                                         </div>
@@ -582,7 +582,7 @@
                                         <div class="hotel-info">
                                             <div class="hotel-details">
                                                 <a href="{%url 'gone_costal_details' %}">
-                                                <h2>Gone coastal varkala</h2>
+                                                <h2>Gone Coastal varkala</h2>
                                                 </a>
                                                 <p><a href="#">Gone coastal varkala</a></p>
                                                 <p>1-2 minutes walk from Varkala Beach</p>
@@ -650,6 +650,49 @@
                                         </div>
                                     </div>
                                 </div>
+
+
+                                      <!--urban_cliff-->
+
+                                <div class="hotel-hover">
+                                    <div class="hotel-card">
+                                        <div class="hotel-image">
+                                            <a href="{%url 'urban_cliff_details' %}">
+                                            <img src="{% static 'image/property_img/urban_cliff_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            </a>
+                                            <div class="more-photos">See all</div>
+                                        </div>
+                                        <div class="hotel-info">
+                                            <div class="hotel-details">
+                                                <a href="{%url 'urban_cliff_details' %}">
+                                                <h2>Urban Cliff Resort</h2>
+                                                </a>
+                                                <p><a href="#">Urban Cliff Reso</a></p>
+                                                <p> About 5 minutes walk to Varkala Beach</p>
+                                                <div class="amenities">
+                                                    <span>Car parking</span>
+                                                    <span> Wi-Fi</span>
+                                                    <span>Shared Access</span>
+                                                    <span>Luggage Assistance</span>
+                                                    <span>Parking available for free</span>
+                                                </div>
+                                            </div>
+                                            <div class="details_info">
+                                                <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                
+                                                <div class="share-buttons">
+                                                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/urban_cliff/" class="facebook" target="_blank">Share on Facebook</a>
+                                                    <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/urban_cliff/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                                </div>
+                
+                                                <a class="viewmore_a" href="{%url 'urban_cliff_details' %}">
+                                                    <button class="view_more_btn">View more</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                    </div>
+
             
                         </div>
                     </div>
