--- a/templates/kerala_bamboo.html
+++ b/templates/kerala_bamboo.html
@@ -92,25 +92,32 @@
                     <p class="tax-price">
                         Located in the heart of Varkala North Beach Cliff with direct beach access. A naturalistic lifestyle surrounded by the forest with good privacy.
                     </p> <br>
-
-                    <span class="txt_roomtype">Room Types</span><br>
-                        <div class="list_div">
-                            <li>Double Room  ----  Room Only</li> 
-
+                    <div class="property_div">
+                        <div class="head_div">
+                         <span class="txt_roomtype">Room Types</span>
                         </div>
+                            <div class="list_div">
+                                <!-- {% comment %} li sentence changed  {% endcomment %} -->
+
+                                <li>Double Room  ----  Room Only</li> 
+                            </div>
+                        </div><br>
 
                     <!-- <span>Property Rules</span><br> -->
 
-                    <div class="list_div">
-                        <h3>Property Rules</h3>
-                        <p>Check-in: 1 PM   Check-out: 10:30 AM</p>
-                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s).</li>
-                        <li>Unmarried couples are not allowed.</li>
-                        <li>Pets are not allowed.</li>
-                        <li>Smoking within the premises is not allowed.</li>
-                        <li>Guests below 18 years of age are not allowed at the property.</li>
-
-                    </div><br><br>
+                    <div class="property_div">
+                        <div class="list_div">
+                            <div class="head_div">
+                                <h3>Property Rules</h3>
+                            </div>
+                            <p>Check-in: 1 PM   Check-out: 10:30 AM</p>
+                            <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s).</li>
+                            <li>Unmarried couples are not allowed.</li>
+                            <li>Pets are not allowed.</li>
+                            <li>Smoking within the premises is not allowed.</li>
+                            <li>Guests below 18 years of age are not allowed at the property.</li>
+                        </div>
+                    </div><br>
 
                     <div class="room_main">
                         <!--hotel-room 1--> 
