--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -94,25 +94,31 @@
                     </p> <br>
 
 
-                    <span class="txt_roomtype">Room Types</span><br>
-                    <div class="list_div">
-                        <li>Executive Room  -- -- Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
-                        <li>AC deluxe double room --  --  Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
-                        <li>AC sea view deluxe double room   -- -- Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
-                        <li>Premium AC  room with Sea View -- --  Room Only & Room with Breakfast available</li>
-                        <li>Suite with Sea View  --  --  Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
-                    </div>
-                    <br><br>
+                    <div class="property_div">
+                        <div class="head_div">
+                        <span class="txt_roomtype">Room Types</span></div>
+                            <div class="list_div">
+                                {% comment %} li sentence changed  {% endcomment %}
+                                <li>Executive Room  -- -- Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
+                                <li>AC deluxe double room --  --  Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
+                                <li>AC sea view deluxe double room   -- -- Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
+                                <li>Premium AC  room with Sea View -- --  Room Only & Room with Breakfast available</li>
+                                <li>Suite with Sea View  --  --  Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
+                            </div>
+                        </div><br>
 
                     <!-- <span>Property Rules</span><br> -->
-                    <div class="list_div">
-                        <h3>Property Rules</h3>
-                        <p>Check-in: 1 PM  Check-out: 11 AM</p>
-    
-                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
-                        <li>Pets are not allowed.</li>
-                        <li>Unmarried couples are not allowed</li>
-                    </div><br><br>
+                    <div class="property_div">
+                        <div class="list_div">
+                            <div class="head_div">
+                                <h3>Property Rules</h3>
+                            </div>
+                            <p>Check-in: 12 PM <span>&</span>  Check-out: 11 AM</p>
+                        
+                            <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                            <li>Pets are not allowed.</li>
+                        </div>
+                    </div><br>
 
                     <div class="room_main">
                         <!--hotel-room 1-->
