--- a/templates/ss_beach_resort.html
+++ b/templates/ss_beach_resort.html
@@ -95,21 +95,27 @@
                         Varkala Bus Stand is 4.3 km away from the property.
                     </p> <br>
 
-                    <span class="txt_roomtype">Room Types</span><br>
-                        <div class="list_div">
-                            <li>Deluxe Double Room With AC -- Room Only</li>`    
-                        </div>
+                    <div class="property_div">
+                        <div class="head_div">
+                        <span class="txt_roomtype">Room Types</span></div>
+                            <div class="list_div">
+                                {% comment %} li sentence changed  {% endcomment %}
+                                <li>Deluxe Double Room With AC -- Room Only</li>
+                            </div>
+                        </div><br>
 
                     <!-- <span>Property Rules</span><br> -->
-                    <div class="list_div">
-                        <h3>Property Rules</h3>
-                        <p>Check-in: 1:30 PM  Check-out: 11 AM</p>
+                    <div class="property_div">
+                        <div class="list_div">
+                            <div class="head_div">
+                                <h3>Property Rules</h3>
+                            </div>
+                        <p>Check-in: 1:30 PM <span>&</span>  Check-out: 11 AM</p>
+                        
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
-                        <li>Outside food is not allowed </li>
                         <li>Pets are not allowed.</li>
-                        <li>Smoking within the premises is not allowed</li>
-
-                    </div><br><br>
+                        </div>
+                    </div><br>
 
                     <div class="room_main">
                         <!--hotel-room 1--> 
