--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -98,19 +98,27 @@
                         The property provides a variety of Ayurveda packages to heal your body. <br>
                     </p> <br>
 
-                    <span class="txt_roomtype">Room Types</span><br>
-                    <div class="list_div">
-                        <li>Non AC Room  --  Room Only  &  Room with Breakfast available</li>
-                        
-                    </div><br><br>
+                    <div class="property_div">
+                        <div class="head_div">
+                        <span class="txt_roomtype">Room Types</span></div>
+                            <div class="list_div">
+                                {% comment %} li sentence changed  {% endcomment %}
+                                <li>Non AC Room  --  Room Only  &  Room with Breakfast available</li>
+                            </div>
+                        </div><br>
 
                     <!-- <span>Property Rules</span><br> -->
-                    <div class="list_div">
-                        <h3>Property Rules</h3>
-                        <p>Check-in: 2 PM Check-out: 11 AM</p>
+                    <div class="property_div">
+                        <div class="list_div">
+                            <div class="head_div">
+                                <h3>Property Rules</h3>
+                            </div>
+                        <p>Check-in: 12 PM <span>&</span>  Check-out: 11 AM</p>
+                        
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                         <li>Pets are not allowed.</li>
-                    </div><br><br>
+                        </div>
+                    </div><br>
 
 
                     <div class="room_main">
@@ -203,8 +211,8 @@
                     </div>
                         <h1 class="Location">Location</h1>
                         <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.62709153765!2d76.7095471740638!3d8.726914393646416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eedde07776bb%3A0x1b510a778eae69a2!2sVilla%20Skyframe!5e0!3m2!1sen!2sin!4v1717518754434!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <a href="https://maps.app.goo.gl/J2MLgpSiG5mWS53L8" target="_blank">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.5379577091185!2d76.7048567!3d8.7353467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eed6aaaaaaab%3A0xfb4dd2c6ae60bd18!2sSS%20BeachResort!5e0!3m2!1sen!2sin!4v1719988727241!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <a href="https://maps.app.goo.gl/kT9X36c9qqvRuF2h7" target="_blank">
                                 <button class="view-map">View on Map</button>
                             </a>              
                         </div>
